tests/ui/server_send/error/has-other-arguments.stderr
error: this attribute takes from one to three assign arguments

         = help: use `#[server_send(level=trace, name="Name", skip="a, b")]`

 --> tests/ui/server_send/error/has-other-arguments.rs:4:15
  |
4 | #[server_send(input % 2)]
  |               ^^^^^^^^^
